--- a/apps/app-1/Jenkinsfile
+++ b/apps/app-1/Jenkinsfile
@@ -1,6 +1,6 @@
 
 pipeline {
-    agent { node { label 'linux && nodejs' }}
+    agent any
 
     options {
         timeout(time: 30, unit: 'MINUTES')
