feat: add app-3

--- a/apps/app-2/Jenkinsfile
+++ b/apps/app-2/Jenkinsfile
@@ -17,7 +17,7 @@ pipeline {
         stage('Build') {
             steps {
                 script {
-                    sh "yarn build --filter=${env.GIT_BRANCH}"
+                    sh "yarn turbo run build --scope=@apps/app-2"
                 }
             }
         }
