refactor: test changeset

--- a/apps/app-1/Jenkinsfile
+++ b/apps/app-1/Jenkinsfile
@@ -17,7 +17,7 @@ pipeline {
         stage('Build') {
             when {
                 anyOf {
-                    changeset "src/*"
+                    changeset "src/App.tsx"
                 }
             }
             steps {
